# speechlmm

./: .gitignore  .pre-commit-config-helios.yaml  .pre-commit-config.yaml  LICENSE  README.md  README_cyfronet.md  apply_patches.py  cyfronet.env  pyproject.toml
.github/ISSUE_TEMPLATE/: 1-usage.yaml  2-feature-request.yaml  3-question.yaml  4-discussion.yaml
conf/accelerate/: deepspeed.yaml
conf/datasets/: alpaca.yml  ami_and_icsi.yml  bc2013.yml  common_voice.yml  covost.yml  cvss.yml  cvss_prefix.yml  cvss_prefix_debug.yml  cvss_test.yml  daps_flores.yml  debug.yml  debug2.yml  interleaved.yml  interleaved_debug.yml  interleaved_only.yml  librilight_de.yml  librilight_de_debug.yml  libritts.yml  libritts_r.yml  libritts_r_debug.yml  libritts_r_interleaved.yml  libritts_r_s2st.yml  libritts_r_s2st_same_io.yml  libritts_r_speaker_descriptions.yml  libritts_r_test.yml  lrs2_video_only.yml  multi_task.yml  mustc.yml  nllb_paracrawl.yml  oasst.yml  s2st.yml  s2st_debug.yml  slu.yml  slu_intent_only.yml  speech2speech.yml  speech2speech_debug.yml  speech2speech_pretrain.yml  speech2speech_test.yml  speech_in.yml  sqa.yml  (+8 more)
conf/deepspeed/: zero0.json  zero1.json  zero2_cif.json  zero2_custom2.json  zero3.json
conf/speechlmm/: base.yaml  evaluate.yaml  finetune.yaml  pretrain.yaml  train.yaml
dataset_gen/temporal_reasoning/: process.py  (+1 more)
docs/: custom_datasets.md
scripts/: ASR_BLEU_WER.py  average_checkpoints.py  inference.py  install.sh  launch_interactive_job_template.sh  launch_riva_inference.sh  launch_riva_inference_cloning.sh  launch_sbatch.sh  make_hdf5.py  make_translation_transcription_instruction_dataset.py  merge_lora_weights.py
speechlmm/: __init__.py  arguments.py  constants.py  conversation.py  mm_utils.py  utils.py  wandb_utils.py
(+317 files in other folders)
