[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "speechlmm"
version = "1.0.0"
description = "Multimodal and multilingual foundation models for videoconferencing use cases."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch==2.3.1", "torchvision==0.18.1", "torchaudio==2.3.1", "librosa", "inflect", "protobuf==3.20.3", "pandas==2.1.2", "wandb==0.17.5",
    "transformers==4.45.0", "tokenizers==0.20.0", "sentencepiece==0.1.99", "shortuuid",
    "accelerate==0.34.0", "peft", "bitsandbytes",
    "pydantic", "markdown2[all]", "numpy", "scikit-learn==1.2.2",
    "gradio==4.16.0", "gradio_client==0.8.1",
    "requests", "httpx==0.24.0", "uvicorn", "fastapi",
    "einops==0.6.1", "einops-exts==0.0.4", "timm==0.6.13", "tensorboardx==2.6.2.2",
    "jiwer==3.0.4", "evaluate==0.4.2", "nltk", "sacrebleu", "openai-whisper", "num2words"
]

[project.optional-dependencies]
train = ["deepspeed==0.15.3", "ninja", "wandb", "hydra-core", "hydra-submitit-launcher"]
build = ["build", "twine"]
dev = ["pre-commit", "pdbpp", "py-spy"]

[project.urls]
"Homepage" = "https://meetween.eu"
"Bug Tracker" = "https://github.com/Meetween/speechlmm/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "build", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "build", "dist*", "playground*", "scripts*", "tests*"]

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
profile="black"
